==> PAE-HP-TARDOR-2025/Slave-firmware/slave/components/canopennodeesp32/CO_driver.c <==
#include "301/CO_driver.h"
#include "esp_log.h"
#include "driver/twai.h"
#define DRV_TX_TASK_STACK_SIZE 4096
#define DRV_RX_TASK_STACK_SIZE 4096
#define DRV_TWAI_TX_GPIO 5
#define DRV_TWAI_RX_GPIO 4
#define DRV_TX_TASK_PRIORITY 10
#define DRV_RX_TASK_PRIORITY 10
#define CONFIG_CO_TASK_CORE 0

CO_ReturnError_t CO_CANmodule_init(
    CO_CANmodule_t *CANmodule,
    void *CANptr,
    CO_CANrx_t rxArray[],
    uint16_t rxSize,
    CO_CANtx_t txArray[],
    uint16_t txSize,
    uint16_t CANbitRate)
{
    uint16_t i;

    /* verify arguments */
    if (CANmodule == NULL || rxArray == NULL || txArray == NULL)
    {
        return CO_ERROR_ILLEGAL_ARGUMENT;
    }

#if CONFIG_CO_LED_ENABLE
    gpio_config_t io_conf;
    uint64_t pinMask = 0ULL;
#if (CONFIG_CO_LED_RED_GPIO >= 0)
    pinMask |= (1ULL << CONFIG_CO_LED_RED_GPIO);
#endif
#if (CONFIG_CO_LED_GREEN_GPIO >= 0)
    pinMask |= (1ULL << CONFIG_CO_LED_GREEN_GPIO);
#endif
    io_conf.intr_type = GPIO_INTR_DISABLE;
    io_conf.mode = GPIO_MODE_OUTPUT;
    io_conf.pin_bit_mask = pinMask;
    io_conf.pull_down_en = 0;
    io_conf.pull_up_en = 0;
    gpio_config(&io_conf);
    /* Set LED off */
#if (CONFIG_CO_LED_RED_GPIO >= 0)
    gpio_set_level(CONFIG_CO_LED_RED_GPIO,
#if CONFIG_CO_LED_RED_ACTIVE_HIGH
                   0);
#else
                   1);
#endif /* CONFIG_CO_LED_RED_ACTIVE_HIGH */
#endif

#if (CONFIG_CO_LED_GREEN_GPIO >= 0)
    gpio_set_level(CONFIG_CO_LED_GREEN_GPIO,
#if CONFIG_CO_LED_GREEN_ACTIVE_HIGH
                   0);
#else
                   1);
#endif
#endif
#endif /* CONFIG_CO_LED_ENABLE */

    /* Configure object variables */
    CANmodule->CANptr = CANptr;
    CANmodule->rxArray = rxArray;
    CANmodule->rxSize = rxSize;
    CANmodule->txArray = txArray;
    CANmodule->txSize = txSize;
    CANmodule->CANerrorStatus = 0;
    CANmodule->CANnormal = false;
    CANmodule->useCANrxFilters = false;
    CANmodule->bufferInhibitFlag = false;
    CANmodule->firstCANtxMessage = true;
    CANmodule->CANtxCount = 0U;
    CANmodule->errOld = 0U;

    for (i = 0U; i < rxSize; i++)
    {
        rxArray[i].ident = 0U;
        rxArray[i].mask = 0xFFFFU;
        rxArray[i].object = NULL;
        rxArray[i].CANrx_callback = NULL;
    }
    for (i = 0U; i < txSize; i++)
    {
        txArray[i].bufferFull = false;
    }

    /* Configure CAN module registers */
    twai_general_config_t g_config = TWAI_GENERAL_CONFIG_DEFAULT(DRV_TWAI_TX_GPIO, DRV_TWAI_RX_GPIO, TWAI_MODE_NORMAL);
    twai_filter_config_t f_config = TWAI_FILTER_CONFIG_ACCEPT_ALL();
    twai_timing_config_t t_config;
    for (i = 0; i < (sizeof(baudrate_config) / sizeof(baudrate_config[0])); i++)
    {
        if (CANbitRate == baudrate_config[i].kbps)
        {
            t_config = baudrate_config[i].timing_config;
            break;
        }
    }
    if (i >= (sizeof(baudrate_config) / sizeof(baudrate_config[0])))
    {
        /* Baudrate not found */
        return CO_ERROR_ILLEGAL_BAUDRATE;
    }

    /* Install TWAI driver */
    if (bInstalled != true)
    {
        /* create Mutex */
        CANmodule->xMutexCanSendHdl = xSemaphoreCreateRecursiveMutexStatic(&(CANmodule->xMutexCanSendBuf));
        CANmodule->xMutexEmcyHdl = xSemaphoreCreateRecursiveMutexStatic(&(CANmodule->xMutexEmcyBuf));
        CANmodule->xMutexODHdl = xSemaphoreCreateRecursiveMutexStatic(&(CANmodule->xMutexODBuf));

        /* Install TWAI */
        // --- AÑADE ESTO PARA VER LA VERDAD ---
        ESP_LOGE(TAG, ">>> DEBUG: Intentando iniciar CAN con TX=%d y RX=%d", g_config.tx_io, g_config.rx_io);
        // -------------------------------------
        ESP_ERROR_CHECK(twai_driver_install(&g_config, &t_config, &f_config));
        ESP_LOGI(TAG, "Driver installed");
        ESP_ERROR_CHECK(twai_start());
        ESP_LOGI(TAG, "Driver started");

        bInstalled = true;

        /* Create Tx tasks */
        ESP_LOGI(TAG, "Creating Tx Task");
        xCoTxTaskHandle = xTaskCreateStaticPinnedToCore(
            CO_txTask,
            "CO_tx",
            DRV_TX_TASK_STACK_SIZE,
            (void *)CANmodule,
            DRV_TX_TASK_PRIORITY,
            &xCoTxStack[0],
            &xCoTxTaskBuffer,
            CONFIG_CO_TASK_CORE);
        if (xCoTxTaskHandle == NULL)
        {
            ESP_LOGE(TAG, "txTask creation failed");
            return CO_ERROR_OUT_OF_MEMORY;
        }
        /* Create Rx tasks */
        ESP_LOGI(TAG, "Creating Rx Task");
        xCoRxTaskHandle = xTaskCreateStaticPinnedToCore(
            CO_rxTask,
            "CO_rx",
            DRV_RX_TASK_STACK_SIZE,
            (void *)CANmodule,
            DRV_RX_TASK_PRIORITY,
            &xCoRxStack[0],
            &xCoRxTaskBuffer,
            CONFIG_CO_TASK_CORE);
        if (xCoRxTaskHandle == NULL)
        {
            ESP_LOGE(TAG, "rxTask creation failed");
            return CO_ERROR_OUT_OF_MEMORY;
        }
    }
    else
    {
        ESP_LOGI(TAG, "Driver already installed");
    }

    return CO_ERROR_NO;
}

void CO_CANmodule_disable(CO_CANmodule_t *CANmodule)
{
    if (CANmodule != NULL)
    {
        /* Take all mutex before deleting it */
        xSemaphoreTakeRecursive(CANmodule->xMutexCanSendHdl, portMAX_DELAY);
        xSemaphoreTakeRecursive(CANmodule->xMutexEmcyHdl, portMAX_DELAY);
        xSemaphoreTakeRecursive(CANmodule->xMutexODHdl, portMAX_DELAY);

        /* Delete Tx and Rx Tasks */
        vTaskDelete(xCoTxTaskHandle);
        xCoTxTaskHandle = NULL;
        vTaskDelete(xCoRxTaskHandle);
        xCoRxTaskHandle = NULL;
        ESP_LOGI(TAG, "tx and rx tasks deleted");

        /* As holder of mutex, it is safe to delete it */
        vSemaphoreDelete(CANmodule->xMutexCanSendHdl);
        vSemaphoreDelete(CANmodule->xMutexEmcyHdl);
        vSemaphoreDelete(CANmodule->xMutexODHdl);
        CANmodule->xMutexCanSendHdl = NULL;
        CANmodule->xMutexEmcyHdl = NULL;
        CANmodule->xMutexODHdl = NULL;
        ESP_LOGI(TAG, "mutex deleted");

        /* Uninstall TWAI */
        ESP_ERROR_CHECK(twai_stop());
        ESP_LOGI(TAG, "Driver stopped");
        ESP_ERROR_CHECK(twai_driver_uninstall());
        ESP_LOGI(TAG, "Driver uninstalled");

        bInstalled = false;
    }
}

CO_ReturnError_t CO_CANsend(CO_CANmodule_t *CANmodule, CO_CANtx_t *buffer)
{
    CO_ReturnError_t err = CO_ERROR_NO;

    CO_LOCK_CAN_SEND(CANmodule);

    /* Verify overflow */
    if (buffer->bufferFull)
    {
        if (!CANmodule->firstCANtxMessage)
        {
            /* don't set error, if bootup message is still on buffers */
            CANmodule->CANerrorStatus |= CO_CAN_ERRTX_OVERFLOW;
        }
        err = CO_ERROR_TX_OVERFLOW;
    }

#if CONFIG_CO_DEBUG_DRIVER_CAN_SEND
    ESP_LOGI(TAG, "CANTX id: 0x%lx, dlc: %d, data: [%d %d %d %d %d %d %d %d]",
             buffer->ident,
             buffer->DLC,
             buffer->data[0],
             buffer->data[1],
             buffer->data[2],
             buffer->data[3],
             buffer->data[4],
             buffer->data[5],
             buffer->data[6],
             buffer->data[7]);
#endif

    buffer->bufferFull = true;
    CANmodule->CANtxCount++;
    xTaskNotify(xCoTxTaskHandle, 0, eNoAction);
    CO_UNLOCK_CAN_SEND(CANmodule);

    return err;
}

void CO_CANmodule_process(CO_CANmodule_t *CANmodule)
{
    uint32_t err;
    twai_status_info_t statusInfo;
    esp_err_t espRet = ESP_OK;

    espRet = twai_get_status_info(&statusInfo);
    if (espRet != ESP_OK)
    {
        ESP_LOGW(TAG, "twai_get_status_info returns %d", espRet);
        return;
    }

    txErrors = (uint16_t)(statusInfo.tx_error_counter);
    rxErrors = (uint16_t)(statusInfo.rx_error_counter);
    overflow = (uint16_t)(statusInfo.rx_overrun_count);

    err = ((uint32_t)txErrors << 16) | ((uint32_t)rxErrors << 8) | overflow;

    if (CANmodule->errOld != err)
    {
        uint16_t status = CANmodule->CANerrorStatus;

        CANmodule->errOld = err;

        if (txErrors >= 256U)
        {
            /* bus off */
            status |= CO_CAN_ERRTX_BUS_OFF;
        }
        else
        {
            /* recalculate CANerrorStatus, first clear some flags */
            status &= 0xFFFF ^ (CO_CAN_ERRTX_BUS_OFF |
                                CO_CAN_ERRRX_WARNING | CO_CAN_ERRRX_PASSIVE |
                                CO_CAN_ERRTX_WARNING | CO_CAN_ERRTX_PASSIVE);

            /* rx bus warning or passive */
            if (rxErrors >= 128)
            {
                status |= CO_CAN_ERRRX_WARNING | CO_CAN_ERRRX_PASSIVE;
            }
            else if (rxErrors >= 96)
            {
                status |= CO_CAN_ERRRX_WARNING;
            }

            /* tx bus warning or passive */
            if (txErrors >= 128)
            {
                status |= CO_CAN_ERRTX_WARNING | CO_CAN_ERRTX_PASSIVE;
            }
            else if (rxErrors >= 96)
            {
                status |= CO_CAN_ERRTX_WARNING;
            }

            /* if not tx passive clear also overflow */
            if ((status & CO_CAN_ERRTX_PASSIVE) == 0)
            {
                status &= 0xFFFF ^ CO_CAN_ERRTX_OVERFLOW;
            }
        }

        if (overflow != 0)
        {
            /* CAN RX bus overflow */
            status |= CO_CAN_ERRRX_OVERFLOW;
        }

        CANmodule->CANerrorStatus = status;
    }
}
