==> CANopenNode/CanOpenSTM32/stm32f3xx_can/Core/CANOpen_STM32F3xx/CO_driver_STM32F3xx.c <==
#include "301/CO_driver.h"
#include "can.h"

CO_ReturnError_t CO_CANmodule_init(CO_CANmodule_t *CANmodule, void      *HALCanObject,
		CO_CANrx_t rxArray[], uint16_t rxSize, CO_CANtx_t txArray[],
		uint16_t txSize, uint16_t CANbitRate) {
	uint16_t i;

	/* verify arguments */
	if (CANmodule == NULL || rxArray == NULL || txArray == NULL) {
		return CO_ERROR_ILLEGAL_ARGUMENT;
	}

	/* Configure object variables */
	CANmodule->CANptr = (CAN_HandleTypeDef *)HALCanObject;
	CANmodule->rxArray = rxArray;
	CANmodule->rxSize = rxSize;
	CANmodule->txArray = txArray;
	CANmodule->txSize = txSize;
	CANmodule->CANerrorStatus = 0;
	CANmodule->CANnormal = false;
	CANmodule->useCANrxFilters = false; /* microcontroller dependent */
	CANmodule->bufferInhibitFlag = false;
	CANmodule->firstCANtxMessage = true;
	CANmodule->CANtxCount = 0U;
	CANmodule->errOld = 0U;

	for (i = 0U; i < rxSize; i++) {
		rxArray[i].ident = 0U;
		rxArray[i].mask = 0xFFFFU;
		rxArray[i].object = NULL;
		rxArray[i].CANrx_callback = NULL;
	}
	for (i = 0U; i < txSize; i++) {
		txArray[i].bufferFull = false;
	}

	/* Configure CAN module registers */
	CO_CANmodule_disable(CANmodule);
	HAL_CAN_MspDeInit(CANmodule->CANptr);
	HAL_CAN_MspInit(CANmodule->CANptr); /* NVIC and GPIO */

	CANmodule->CANptr->Init.Mode = CAN_MODE_NORMAL;
	CANmodule->CANptr->Init.SyncJumpWidth = CAN_SJW_1TQ;
	CANmodule->CANptr->Init.TimeTriggeredMode = DISABLE;
	CANmodule->CANptr->Init.AutoBusOff = DISABLE;
	CANmodule->CANptr->Init.AutoWakeUp = DISABLE;
	CANmodule->CANptr->Init.AutoRetransmission = ENABLE;
	CANmodule->CANptr->Init.ReceiveFifoLocked = DISABLE;
	CANmodule->CANptr->Init.TransmitFifoPriority = DISABLE;
	CANmodule->CANptr->Init.TimeSeg2 = CAN_BS2_1TQ;
	CANmodule->CANptr->Init.TimeSeg1 = CAN_BS1_10TQ;

//	  hcan.Instance = CAN;
//	  hcan.Init.Prescaler = 8;
//	  hcan.Init.Mode = CAN_MODE_NORMAL;
//	  hcan.Init.SyncJumpWidth = CAN_SJW_1TQ;
//	  hcan.Init.TimeSeg1 = CAN_BS1_10TQ;
//	  hcan.Init.TimeSeg2 = CAN_BS2_1TQ;
//	  hcan.Init.TimeTriggeredMode = DISABLE;
//	  hcan.Init.AutoBusOff = DISABLE;
//	  hcan.Init.AutoWakeUp = DISABLE;
//	  hcan.Init.AutoRetransmission = DISABLE;
//	  hcan.Init.ReceiveFifoLocked = DISABLE;
//	  hcan.Init.TransmitFifoPriority = DISABLE;

	/* Configure CAN timing */
	uint32_t Prescaler = 500;

	switch (CANbitRate) {
	case 1000:
		Prescaler = 5;
		break;
	case 500:
		Prescaler = 10;
		break;
	case 250:
		Prescaler = 12;
		break;
	case 125:
		Prescaler = 40;
		break;
	case 100:
		Prescaler = 50;
		break;
	case 50:
		Prescaler = 100;
		break;
	case 20:
		Prescaler = 250;
		break;
	case 10:
		Prescaler = 500;
		break;

	default:
		return CO_ERROR_ILLEGAL_BAUDRATE;
	}

	CANmodule->CANptr->Init.Prescaler = Prescaler;

	if (HAL_CAN_Init(CANmodule->CANptr) != HAL_OK) {
		//_Error_Handler(__FILE__, __LINE__);
		return CO_ERROR_ILLEGAL_ARGUMENT;
	}

	DefaultCANModule = CANmodule;


	/* Configure CAN module hardware filters */
	if (CANmodule->useCANrxFilters) {
		/* CAN module filters are used, they will be configured with */
		/* CO_CANrxBufferInit() functions, called by separate CANopen */
		/* init functions. */
		/* Configure all masks so, that received message must match filter */
		// TODO : [Future] Filter Implemntation
		__asm__ volatile ("BKPT");
		return CO_ERROR_ILLEGAL_ARGUMENT;
	} else {
		/* CAN module filters are not used, all messages with standard 11-bit */
		/* identifier will be received */
		/* Configure mask 0 so, that all messages with standard identifier are accepted */
		CAN_FilterTypeDef FilterConfig;
		FilterConfig.FilterBank = 0;
		FilterConfig.FilterMode = CAN_FILTERMODE_IDMASK;
		FilterConfig.FilterScale = CAN_FILTERSCALE_32BIT;
		FilterConfig.FilterIdHigh = 0x0;
		FilterConfig.FilterIdLow = 0x0;
		FilterConfig.FilterMaskIdHigh = 0x0;
		FilterConfig.FilterMaskIdLow = 0x0;
		FilterConfig.FilterFIFOAssignment = CAN_RX_FIFO0;
		FilterConfig.FilterActivation = ENABLE;
		FilterConfig.SlaveStartFilterBank = 14;


		if (HAL_CAN_ConfigFilter(CANmodule->CANptr, &FilterConfig)
				!= HAL_OK) {
			return CO_ERROR_ILLEGAL_ARGUMENT;
			printf("HAL_CAN_ConfigFilter error!\n");
		} else {
			printf("HAL_CAN_ConfigFilter OK!\n");
			; //do nothing
		}
	}

	/* configure CAN interrupt registers */
	// [HJ] Probably handled by CubeMX

	return CO_ERROR_NO;
}

void CO_CANmodule_disable(CO_CANmodule_t *CANmodule) {
	if (CANmodule != NULL && CANmodule->CANptr != NULL) {
		/* turn off the module */
		HAL_CAN_DeactivateNotification(CANmodule->CANptr,
		CAN_IT_RX_FIFO0_MSG_PENDING |
		CAN_IT_RX_FIFO1_MSG_PENDING |
		CAN_IT_TX_MAILBOX_EMPTY);
		HAL_CAN_Stop(CANmodule->CANptr);
	}
}

CO_ReturnError_t CO_CANsend(CO_CANmodule_t *CANmodule, CO_CANtx_t *buffer) {
	CO_ReturnError_t err = CO_ERROR_NO;

	/* Verify overflow */
	if (buffer->bufferFull) {
		if (!CANmodule->firstCANtxMessage) {
			/* don't set error, if bootup message is still on buffers */
			CANmodule->CANerrorStatus |= CO_CAN_ERRTX_OVERFLOW;
		}
		err = CO_ERROR_TX_OVERFLOW;
	}

	uint32_t TxMailboxNum;
	CO_LOCK_CAN_SEND(CANmodule);
	prepareTxHeader(&TxHeader, buffer);
	/* if CAN TX buffer is free, copy message to it */
	if ((1 && CANmodule->CANtxCount == 0)
			&& (HAL_CAN_GetTxMailboxesFreeLevel(CANmodule->CANptr) > 0)) {
		CANmodule->bufferInhibitFlag = buffer->syncFlag;
		/* copy message and txRequest */
		if (HAL_CAN_AddTxMessage(CANmodule->CANptr, &TxHeader,
				&buffer->data[0], &TxMailboxNum) != HAL_OK) {
			err = CO_ERROR_ILLEGAL_ARGUMENT;
			printf("[CAN_Driver] Message transmit error !\n");
		} else {
			;/*do nothing*/
		}
	}
	/* if no buffer is free, message will be sent by interrupt */
	else {
		buffer->bufferFull = true;
		CANmodule->CANtxCount++;
	} CO_UNLOCK_CAN_SEND(CANmodule);

	return err;
}

void CO_CANmodule_process(CO_CANmodule_t *CANmodule) {
	// TODO : [HJ] Check this function

	uint32_t HALCANErrorCode = CANmodule->CANptr->ErrorCode;

	if (CANmodule->errOld != HALCANErrorCode) {
		uint16_t status = CANmodule->CANerrorStatus;
		CANmodule->errOld = HALCANErrorCode;

		if (HALCANErrorCode & HAL_CAN_ERROR_BOF) { // BUS if off
			status |= CO_CAN_ERRTX_BUS_OFF;

		} else { // BUS is on
			status &= 0xFFFF
					^ (CO_CAN_ERRTX_BUS_OFF | CO_CAN_ERRRX_WARNING
							| CO_CAN_ERRRX_PASSIVE | CO_CAN_ERRTX_WARNING
							| CO_CAN_ERRTX_PASSIVE);

			if (HALCANErrorCode & HAL_CAN_ERROR_NONE) {
				__asm__ volatile ("BKPT");
				// Why this happened?
			}

			if (HALCANErrorCode & HAL_CAN_ERROR_EWG) { /* bus warning */
				status |= CO_CAN_ERRTX_WARNING | CO_CAN_ERRRX_WARNING;
			}

			// [HJ] Might need to check if it is the first message or not (Bootup message)
			if (HALCANErrorCode & HAL_CAN_ERROR_RX_FOV0) {
				status |= CO_CAN_ERRTX_PASSIVE | CO_CAN_ERRRX_PASSIVE;
			}

			if ((HALCANErrorCode & HAL_CAN_ERROR_RX_FOV0)
					|| (HALCANErrorCode & HAL_CAN_ERROR_RX_FOV1)) {
				status |= CO_CAN_ERRRX_OVERFLOW;
			}
		}
		CANmodule->CANerrorStatus = status;
	}
}
